--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
     "node-schedule": "^2.1.0"
   },
-  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "start": "yarn dev"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node-schedule": "^2.1.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.6.4"
   }
 }
